--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vee-validate/rules": "^4.12.4",
     "axios": "^1.2.1",
     "core-js": "^3.6.5",
+    "firebase": "^10.7.1",
     "moment": "^2.30.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
@@ -32,6 +33,8 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-auth": "^0.1.2",
     "prettier": "^2.5.1"
   },
   "browserslist": [
