--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "core-js": "^3.6.5",
     "firebase": "^10.7.1",
     "moment": "^2.30.1",
-    "pinia": "^2.0.11",
+    "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "3.2.0",
     "quasar": "^2.6.0",
     "vee-validate": "^4.12.4",
     "vue": "^3.0.0",
